feature: wildcard 연습